force-app/zurich-base/main/default/objects/Opportunity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>ZE. Solicitado para incluir en el formato compacto de la oferta</description>
    <formula>TEXT(Account.CommercialActivity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>