force-app/zurich-base/main/default/objects/Opportunity/fields/BuildingCapital__c.field-meta.xml
<CustomField>
    <fullName>BuildingCapital__c</fullName>
    <description>(ZE) Identifica el capital del continente contemplado en la oferta.</description>
    <label>Building Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>