force-app/zurich-base/main/default/objects/Opportunity/fields/BusinessCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessCode__c</fullName>
    <description>(OCS) Identifica el código de negocio en INFO.</description>
    <label>Business Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>