force-app/zurich-base/main/default/objects/Opportunity/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <description>(OCS) Identifica el nombre del negocio en INFO.</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>