force-app/zurich-base/main/default/objects/Opportunity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Campo fórmula para poder mostrar la campaña en los list view</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>