force-app/zurich-base/main/default/objects/Opportunity/fields/CarRegistration__c.field-meta.xml
<CustomField>
    <fullName>CarRegistration__c</fullName>
    <externalId>true</externalId>
    <label>Car Registration</label>
    <length>40</length>
    <type>Text</type>
</CustomField>