force-app/zurich-base/main/default/objects/Opportunity/fields/ChanceOfSuccess__c.field-meta.xml
<CustomField>
    <fullName>ChanceOfSuccess__c</fullName>
    <label>Chance of success</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En marcha</fullName>
            </value>
            <value>
                <fullName>Sin feedback</fullName>
            </value>
            <value>
                <fullName>Solicitado feedback</fullName>
            </value>
            <value>
                <fullName>Escalar/SOS</fullName>
            </value>
            <value>
                <fullName>Emitido</fullName>
            </value>
            <value>
                <fullName>Emitido diferido</fullName>
            </value>
            <value>
                <fullName>Perdida - Mediador</fullName>
            </value>
            <value>
                <fullName>Rechazado - Zurich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>