force-app/zurich-base/main/default/objects/Opportunity/fields/ClonedOfferForIntermediary__c.field-meta.xml
<CustomField>
    <fullName>ClonedOfferForIntermediary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned Offer For Intermediary</label>
    <type>Checkbox</type>
</CustomField>