force-app/zurich-base/main/default/objects/Opportunity/fields/CommercialCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialCode__c</fullName>
    <description>(OCS) Identifica el código comercial del producto en INFO.</description>
    <formula>ProductId__r.CommercialCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Code</label>
    <type>Text</type>
</CustomField>