force-app/zurich-base/main/default/objects/Opportunity/fields/CommercialProductCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialProductCode__c</fullName>
    <label>Commercial Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>