force-app/zurich-base/main/default/objects/Opportunity/fields/CommercialStructureCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialStructureCode__c</fullName>
    <description>(OCS). Código de estructura comercial asociado a la oferta</description>
    <label>Commercial Structure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>