force-app/zurich-base/main/default/objects/Opportunity/fields/CommercialStructureName__c.field-meta.xml
<CustomField>
    <fullName>CommercialStructureName__c</fullName>
    <description>(OCS). Nombre de estructura comercial asociado a la oferta</description>
    <label>Commercial Structure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>