force-app/zurich-base/main/default/objects/Opportunity/fields/ContentCapital__c.field-meta.xml
<CustomField>
    <fullName>ContentCapital__c</fullName>
    <description>(ZE) Identifica el capital del contenido contemplado en la oferta.</description>
    <label>Content Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>