force-app/zurich-base/main/default/objects/Opportunity/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>(ZE/OCS) Identifica la fecha de creación de la póliza en INFO. No tiene por qué coincidir con la fecha de creación estándar de Salesforce.</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>