force-app/zurich-base/main/default/objects/Opportunity/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>(ZE/OCS) identifica la fecha a partir de la cual la póliza entraría en vigor.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>