force-app/zurich-base/main/default/objects/Opportunity/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>(ZE/OCS) Identifica la fecha de vencimiento de la oferta.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>