force-app/zurich-base/main/default/objects/Opportunity/fields/FirstReceipt__c.field-meta.xml
<CustomField>
    <fullName>FirstReceipt__c</fullName>
    <label>First Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>