force-app/zurich-base/main/default/objects/Opportunity/fields/GeneralLiabilityLimit__c.field-meta.xml
<CustomField>
    <fullName>GeneralLiabilityLimit__c</fullName>
    <description>(ZE) Identifica el límite de Responsabilidad Civil contemplado en la oferta.</description>
    <label>General Liability Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>