force-app/zurich-base/main/default/objects/Opportunity/fields/HasBeenReassigned__c.field-meta.xml
<CustomField>
    <fullName>HasBeenReassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been reassigned</label>
    <type>Checkbox</type>
</CustomField>