force-app/zurich-base/main/default/objects/Opportunity/fields/InfoLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>InfoLastModifiedDate__c</fullName>
    <description>ZE OCS. Fecha de última modificación del registro en INFO</description>
    <label>INFO Last Modified Date</label>
    <type>Date</type>
</CustomField>