force-app/zurich-base/main/default/objects/Opportunity/fields/InfoQuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoQuoteNumber__c</fullName>
    <description>(ZE/OCS) identificador de la oferta en INFO.</description>
    <externalId>true</externalId>
    <label>Quote Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>