force-app/zurich-base/main/default/objects/Opportunity/fields/IntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryCode__c</fullName>
    <description>(OCS) Identifica al Mediador o Partner asociado a la oferta.</description>
    <label>Intermediary Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>