force-app/zurich-base/main/default/objects/Opportunity/fields/IntermediaryName__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryName__c</fullName>
    <description>(OCS) Identifica el nombre del intermediario ya sea partner o mediador. Existe además del lookup IntermedaryId para aquellos casos en los que pueda no existir un intermediario en base a sus códigos.</description>
    <label>Intermediary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>