force-app/zurich-base/main/default/objects/Opportunity/fields/IsParentBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsParentBlocked__c</fullName>
    <formula>Account.Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentBlocked</label>
    <type>Checkbox</type>
</CustomField>