force-app/zurich-base/main/default/objects/Opportunity/fields/isProductLife__c.field-meta.xml
<CustomField>
    <fullName>isProductLife__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProductLife</label>
    <type>Checkbox</type>
</CustomField>