force-app/zurich-base/main/default/objects/Opportunity/fields/IssuedOnline__c.field-meta.xml
<CustomField>
    <fullName>IssuedOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(ZE) identifica si la póliza se ha emitido online.</description>
    <label>Issued Online</label>
    <type>Checkbox</type>
</CustomField>