force-app/zurich-base/main/default/objects/Opportunity/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite identificar las ofertas introducidas en el sistema a causa de una prueba automatizada por un sistema externo.</description>
    <label>Oferta de prueba</label>
    <type>Checkbox</type>
</CustomField>