force-app/zurich-base/main/default/objects/Opportunity/fields/isUpdatedFromINFO__c.field-meta.xml
<CustomField>
    <fullName>isUpdatedFromINFO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is updated from INFO</label>
    <type>Checkbox</type>
</CustomField>