force-app/zurich-base/main/default/objects/Opportunity/fields/IsUspProduct__c.field-meta.xml
<CustomField>
    <fullName>IsUspProduct__c</fullName>
    <formula>ProductId__r.IsUspProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is USP Product?</label>
    <type>Checkbox</type>
</CustomField>