force-app/zurich-base/main/default/objects/Opportunity/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>(ZE) Idioma de la tarificación.</description>
    <label>Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>