force-app/zurich-base/main/default/objects/Opportunity/fields/LastAccountId__c.field-meta.xml
<CustomField>
    <fullName>LastAccountId__c</fullName>
    <description>[ZRM] campo que acompaña a LastDateIntermediaryOrAccountChange__c indicando el valor anterior de IntermediaryId__c o AccountId cuando se han actualizado. Para account solo se escribe si el cambio es de cliente a cliente</description>
    <label>Last Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>