force-app/zurich-base/main/default/objects/Opportunity/fields/LastDateIntermediaryOrAccountChange__c.field-meta.xml
<CustomField>
    <fullName>LastDateIntermediaryOrAccountChange__c</fullName>
    <description>[ZRM] Guardamos la fecha de la ultima modificación que ha sufrido el campo IntermediaryId__c o el campo AccountId para que el proceso batch recalcule la visibilidad de los ATM de la comunidad</description>
    <label>Last Date Intermediary Or Account Change</label>
    <type>Date</type>
</CustomField>