force-app/zurich-base/main/default/objects/Opportunity/fields/LegalAuth__c.field-meta.xml
<CustomField>
    <fullName>LegalAuth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Auth</label>
    <type>Checkbox</type>
</CustomField>