force-app/zurich-base/main/default/objects/Opportunity/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &apos;Life&apos;, &apos;Life Insurance&apos;, 
			IF($Profile.Name = &apos;ZE User&apos; || $Profile.Name = &apos;Ventas User&apos;,
			    &apos;001&apos;,
			        &apos;&apos;))</defaultValue>
    <description>(ZE/OCS) Identifica la entidad legal a la que pertenece la oferta.</description>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>General Insurance</fullName>
            </value>
            <value>
                <fullName>000</fullName>
                <label>Todos</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Zurich</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>CAN SSGG</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>CAS SSGG</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>CAS Vida</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Zurich Vida</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>DZ Pensiones</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>EPSV Zurich</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>BSSG</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>Multientidad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>