force-app/zurich-base/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>No Interesa</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Coberturas</fullName>
            </value>
            <value>
                <fullName>Fake</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Exclusión/Política Técnica</fullName>
            </value>
            <value>
                <fullName>Ya es cliente</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
            <value>
                <fullName>Solicitud de cancelación</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>