force-app/zurich-base/main/default/objects/Opportunity/fields/LossSubReason__c.field-meta.xml
<CustomField>
    <fullName>LossSubReason__c</fullName>
    <description>(ZE) Identifica la razón por la cual la Oportunidad ha sido Cerrada como perdida.</description>
    <label>Sub-reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excluded professions</fullName>
            </value>
            <value>
                <fullName>Risk quality</fullName>
            </value>
            <value>
                <fullName>Excluded risks</fullName>
            </value>
            <value>
                <fullName>Insurance conditions</fullName>
            </value>
            <value>
                <fullName>Product not insurable in ZE.es</fullName>
            </value>
            <value>
                <fullName>Several</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>