force-app/zurich-base/main/default/objects/Opportunity/fields/LossSubReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>LossSubReasonDescription__c</fullName>
    <description>(ZE) Permite que el usuario explique el motivo de pérdida, cuando se ha elegido ha elegido &quot;Varios&quot; como Sub-motivo.</description>
    <label>Sub-reason Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>