force-app/zurich-base/main/default/objects/Opportunity/fields/MaxOptionNetPremium__c.field-meta.xml
<CustomField>
    <fullName>MaxOptionNetPremium__c</fullName>
    <label>Max Option Net Premium</label>
    <summarizedField>Quote.NetPremium__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>