force-app/zurich-base/main/default/objects/Opportunity/fields/MaxOptionTotalPremium__c.field-meta.xml
<CustomField>
    <fullName>MaxOptionTotalPremium__c</fullName>
    <label>Max Option Total Premium</label>
    <summarizedField>Quote.TotalPremium__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>