force-app/zurich-base/main/default/objects/Opportunity/fields/NextReceipts__c.field-meta.xml
<CustomField>
    <fullName>NextReceipts__c</fullName>
    <label>Next Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>