force-app/zurich-base/main/default/objects/Opportunity/fields/OldAccountId__c.field-meta.xml
<CustomField>
    <fullName>OldAccountId__c</fullName>
    <description>This field is used to control the change of account from lead to the client when it comes from INFO. This way we can do a merge of accounts. This merge will be done in a batch (Batch_MergeLeadsWithClients)</description>
    <label>OldAccountId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>