force-app/zurich-base/main/default/objects/Opportunity/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <description>(ZE) Código de operación del servicio web.</description>
    <label>Operation Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>