force-app/zurich-base/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Identifica al partner asociado a la póliza</description>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers (Partner)</relationshipLabel>
    <relationshipName>OffersPartner</relationshipName>
    <type>Lookup</type>
</CustomField>