force-app/zurich-base/main/default/objects/Opportunity/fields/PaymentChannel__c.field-meta.xml
<CustomField>
    <fullName>PaymentChannel__c</fullName>
    <description>(ZE) Tipo de canal de pago en la emisión online.</description>
    <label>Payment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>