force-app/zurich-base/main/default/objects/Opportunity/fields/PaymentChannelSucc__c.field-meta.xml
<CustomField>
    <fullName>PaymentChannelSucc__c</fullName>
    <description>(ZE) Tipo de canal de pago sucesivo en la emisión online.</description>
    <label>Payment Channel Succ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>