force-app/zurich-base/main/default/objects/Opportunity/fields/PaymentTypeSucc__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeSucc__c</fullName>
    <description>(ZE) Tipo de pago sucesivo en la emisión online.</description>
    <label>Payment Type Succ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>