force-app/zurich-base/main/default/objects/Opportunity/fields/PendingBy__c.field-meta.xml
<CustomField>
    <fullName>PendingBy__c</fullName>
    <description>(ZE). Utilizado para cuando la tramitación de la oferta depende de un factor externo</description>
    <label>Pending by</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Suscripción</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>