force-app/zurich-base/main/default/objects/Opportunity/fields/PendingClientInformation__c.field-meta.xml
<CustomField>
    <fullName>PendingClientInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Client Information</label>
    <type>Checkbox</type>
</CustomField>