force-app/zurich-base/main/default/objects/Opportunity/fields/PendingClientInformationMore__c.field-meta.xml
<CustomField>
    <fullName>PendingClientInformationMore__c</fullName>
    <label>Pending Client Information More</label>
    <type>TextArea</type>
</CustomField>