force-app/zurich-base/main/default/objects/Opportunity/fields/PendingIntermediaryReview__c.field-meta.xml
<CustomField>
    <fullName>PendingIntermediaryReview__c</fullName>
    <description>Indica si el mediador debe revisar la oferta</description>
    <formula>AND(
				$Profile.Name = &apos;Agente Ventas&apos;, 
				Owner.Profile.Name &lt;&gt; &apos;Agente Ventas&apos;, 
				ISPICKVAL(Campaign.Type, &apos;Cross Selling&apos;), 
				Campaign.IsActive, 
				NOT(ISBLANK(Campaign.StartDate)), 
				TODAY() &lt; Campaign.StartDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Intermediary Review</label>
    <type>Checkbox</type>
</CustomField>