force-app/zurich-base/main/default/objects/Opportunity/fields/PotentialMatch__c.field-meta.xml
<CustomField>
    <fullName>PotentialMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la oportunidad debe ser revisada por un proceso asíncrono en busca de coincidencias (otras oportunidades con las que haga match). Se marca este campo cuando la Oportunidad ha sigo generada desde INFO, pertenece a ZRM y no ha localizado ninguna Oportunidad en el sistema que actualizar (es decir, se ha insertado) a través del código de info (INFOQuoteNumber__c).</description>
    <label>Potential Match</label>
    <type>Checkbox</type>
</CustomField>