force-app/zurich-base/main/default/objects/Opportunity/fields/PreferedContactEnd__c.field-meta.xml
<CustomField>
    <fullName>PreferedContactEnd__c</fullName>
    <label>Horario Cont. Preferente Fin</label>
    <type>DateTime</type>
</CustomField>