force-app/zurich-base/main/default/objects/Opportunity/fields/PreferedContactEndFor__c.field-meta.xml
<CustomField>
    <fullName>PreferedContactEndFor__c</fullName>
    <formula>Account.PreferedContactEnd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefered Contact End For</label>
    <type>DateTime</type>
</CustomField>