force-app/zurich-base/main/default/objects/Opportunity/fields/PreferedContactStart__c.field-meta.xml
<CustomField>
    <fullName>PreferedContactStart__c</fullName>
    <label>Horario Cont. Preferente Inicio</label>
    <type>DateTime</type>
</CustomField>