force-app/zurich-base/main/default/objects/Opportunity/fields/PreferedContactStartFor__c.field-meta.xml
<CustomField>
    <fullName>PreferedContactStartFor__c</fullName>
    <formula>Account.PreferedContactStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefered Contact Start For</label>
    <type>DateTime</type>
</CustomField>