force-app/zurich-base/main/default/objects/Opportunity/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>(OCS) Usado por Marketing Cloud para clasificar las oportunidades</description>
    <formula>ProductId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>